# SlackAiBotAPI

./: .envrc.example  .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: deploy_to_lambda.yml
function/: lambda_function.py
tests/: test.py
