[project]
name = "slackbotapi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mk1018", email = "ktmn1018@yahoo.co.jp" }
]
dependencies = [
    "openai>=1.44.0",
    "pytest>=8.3.2",
    "pydantic-core>=2.23.2",
    "slack-sdk>=3.32.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["functions"]

[tool.rye.scripts]
format = "rye run ruff format ."
lint = "rye run ruff check ."
test = "rye run pytest -s tests/"
